test/files/neg/t6011.check
t6011.scala:4: error: unreachable code
    case 'a' | 'c' => 1 // unreachable
                      ^
t6011.scala:10: error: unreachable code
    case 'b' | 'a'  => 1 // unreachable
                       ^
t6011.scala:8: error: could not emit switch for @switch annotated match
  def f2(ch: Char): Any = (ch: @annotation.switch) match {
                                ^
three errors found
